# markdown-thing

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.pi/: settings.json
pi-extension/: README.md  index.ts
src/: app.ts  app.tsx  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: files.rs  handoff.rs  lib.rs  main.rs
src/editor/: createEditor.ts  fontSizePreference.ts  leaderPreference.ts  lineEndings.ts  lineNumberPreference.ts  livePreview.ts  markdownModel.ts  mermaidLoader.ts  shikiHighlighter.ts  taskToggle.ts  vimClipboard.ts  vimLogicalLines.ts  vimTaskMapping.ts
src/editor/widgets/: EmbeddedCodeEditor.ts  ImageWidget.ts  MarkdownWidgets.ts  MermaidWidget.ts
src/file/: documentController.ts  imageResolver.ts  tauriFiles.ts
src/theme/: editorThemes.ts  emberPalette.ts  themeController.ts
tests/: app.test.ts  createEditor.test.ts  documentController.test.ts  emberPalette.test.ts  fontSizePreference.test.ts  imageResolver.test.ts  leaderPreference.test.ts  lineEndings.test.ts  lineNumberPreference.test.ts  livePreview.test.ts  markdownModel.test.ts  mermaidDetection.test.ts  mermaidTheme.test.ts  shikiHighlighter.test.ts  taskToggle.test.ts  themeController.test.ts  vimClipboard.test.ts  vimTaskMapping.test.ts
